--- a/CSS/style.css
+++ b/CSS/style.css
@@ -36,11 +36,10 @@ header,
     width: 100%;
 }
 
-.logo_img {
-    height: 40px;
-    width: 180px;
-    background-image: url(..//img/logo.png);
-    background-size: contain;
+header h1 {
+    color: white;
+    text-transform: uppercase;
+    font-size: 25px;
 }
 
 .header_container {
@@ -182,8 +181,14 @@ header,
     font-weight: 400;
 }
 
+.condition a {
+    text-decoration: none;
+    color: rgba(148, 148, 148, 0.87);
+}
+
 .conditions .text_two {
     margin-top: 20px;
+    font-size: 15px;
 }
 
 .title {
